# MadDev

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  index.js  package-lock.json  package.json  shell.nix  tsconfig.json
.changeset/: group-members-include-primary.md  nice-bats-laugh.md  poor-pans-ring.md  pre.json  tap-enum-locale-fix.md  v1-linux-native-rewrite.md
.github/workflows/: prerelease.yml  release.yml
client/: tsconfig.json
client/src/: index.mts
docs/: README.md  ca.md  cli-reference.md  client.md  enrollment.md  field-devices.md  forwarding.md  groups.md  install.md  revocation.md  tun.md  vpn.md
docs/internal/: tun-tap-walkthrough.md
native/: Cargo.toml  index.d.ts  index.js  package.json
native/src/: lib.rs
native/src/netlink/: bridge.rs  mod.rs
native/usage-bpf/: README.md  usage_unix.bt
native/windows-tap/: Cargo.toml
native/windows-tap/src/: backend.rs  errors.rs  handle.rs  installer.rs  lib.rs  pump.rs  tap_win6.rs  wintun.rs
patches/: ssh2+1.15.0.patch
scripts/: ensure-vendor-stubs.sh  smoke-windows-native.ts
src/: ca.ts  cli.ts  client.ts  command.ts  gateway.ts  groups.ts  index.ts  menu.ts  permission.ts  settings.ts  shell.ts  user.ts
src/auth/: none.ts  password.ts  publickey.ts
src/bash/: setupBridge.sh
src/commands/: _helper.ts  admin.ts  buildClient.ts  ca.ts  cert.ts  doctor.ts  enroll.ts  gateway.ts  help.ts  index.ts  install.ts  mad.ts  networking.ts  otp.ts  readme.ts  services.ts  setup.ts  signsshkey.ts  sshca.ts  system.ts  tap.ts  tun.ts  (+4 more)
systemd/: mad-daemon.service  sshd_config.snippet
(+88 files in other folders)
