[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
napi        = { version = "2", features = ["tokio_rt"] }
napi-derive = "2"
rtnetlink   = "0.14.1"
netlink-proto = "0.11.3"
netlink-packet-route = "0.19.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "~2.5.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true