[package]
name = "mad_wintap"
version = "0.1.0"
edition = "2021"
publish = false
description = "Windows TAP/TUN backend for mad — loaded by src/utils/tapPipe.ts via bun:ffi"

[lib]
crate-type = ["cdylib"]

# Strip symbols + LTO so the shipped DLL is small. The C ABI surface is
# tiny — every public symbol is in lib.rs.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
